web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-parameter6/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,7)
1|async await => 42
 |     ^
